force-app/main/default/objects/Voyage__c/Voyage__c.object-meta.xml
<CustomObject>
    <label>Voyage</label>
    <nameField>
        <displayFormat>V-{00000}</displayFormat>
        <label>Voyage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Voyages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>