force-app/main/default/objects/Voyage__c/fields/Travel_Offering__c.field-meta.xml
<CustomField>
    <fullName>Travel_Offering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Travel Offering</label>
    <referenceTo>TravelOffering__c</referenceTo>
    <relationshipLabel>Voyages</relationshipLabel>
    <relationshipName>Voyages</relationshipName>
    <type>Lookup</type>
</CustomField>